--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-naries for programs and plugins
+bnaries for programs and plugins
 *.exe
 *.exe~
 *.dll
@@ -20,3 +20,4 @@ naries for programs and plugins
 /config
 config.yml
 vendor/
+*.o
