--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,5 +15,6 @@ install:
   - go get -d ./...
 
 build_script:
-  - go test -v -cpu=2 ./...
-  - go test -cpu=1,2,4 -short -race ./...
+  - go test -v -cpu=2 ./test
+  - go test -cpu=1,2,4 -short -race ./test
+  -
